# prozorro_tasks

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  README.rst  celeryconfig.py  docker-compose.yml  entrypoint.sh  environment_settings.py  healthcheck.py  pyproject.toml  requirements.txt  run_tasks.py  runserver.py
app/: api.py  app.py  auip.ini  auth.ini  auth.py  counterparties.ini  exceptions.py  filters.py  logging.py  middleware.py  resources.py  settings.py  utils.py  views.py
app/templates/: base.html  index.html
app/tests/: base.py  test_utils.py
autoclient_payments/: cached.py  data.py  enums.py  handlers.py  health.py  logging.py  message_ids.py  messages.py  results_db.py  settings.py  tasks.py  utils.py
autoclient_payments/tests/: conftest.py  test_handlers.py  test_results_db.py  test_utils.py
autoclient_payments/views/: context.py  schemes.py  views.py
celery_ui/: context.py  events.py  utils.py  views.py
celery_worker/: celery.py  locks.py  tasks.py
celery_worker/tests/: test_concurrency_lock.py  test_locks.py
certificates/: nazk_test.crt
chronograph/: handlers.py  tasks.py
chronograph/tests/: test_handlers.py
crawler/: handlers.py  main.py  resources.py  settings.py  tasks.py  utils.py
crawler/handlers/: auctions.py  auctions_bids.py  cbd_copy.py  dummy_handler.py
crawler/tests/: test_crawler_item_handlers.py  test_process_feed.py
docs/: deployment.uml  edr_bot.uml  fiscal_bot.uml  treasury.uml
edr_bot/: exceptions.py  handlers.py  results_db.py  settings.py  tasks.py  utils.py  views.py
edr_bot/data/: mock_data_details.json
edr_bot/tests/: test_attach_doc_to_tender.py  test_get_edr_data.py  test_handlers.py  test_process_tender.py  test_results_db.py  test_upload_to_doc_service.py  test_utils.py  test_views.py
fiscal_bot/: fiscal_api.py  handlers.py  settings.py  tasks.py  utils.py
fiscal_bot/templates/: request.xml
fiscal_bot/tests/: test_check_for_response_file.py  test_decode_and_save_data.py  test_fiscal_api.py  test_handlers.py  test_prepare_check_request.py  test_prepare_receipt_request.py  test_process_tender.py  test_send_request_receipt.py  test_utils.py
liqpay_int/: api.py  codes.py  errors.py  examples.py  exceptions.py  namespaces.py  representations.py  reqparse.py  resources.py  responses.py  settings.py  tasks.py  utils.py
liqpay_int/broker/: examples.py  messages.py  models.py  namespaces.py  parsers.py  resources.py  responses.py  utils.py
liqpay_int/provider/: __init__.py  messages.py  models.py  namespaces.py  parsers.py  resources.py
nazk_bot/: handlers.py  results_db.py  settings.py  tasks.py
nazk_bot/api/: controllers.py  exceptions.py  views.py
nazk_bot/certificates/: Тест_Прозорро-7973142.cer
nazk_bot/tests/: test_decode_and_save_data.py  test_handlers.py  test_prepare_nazk_request.py  test_process_tender.py  test_send_request_nazk.py
payments/: __init__.py  cached.py  context.py  data.py  filters.py  handlers.py  health.py  logging.py  message_ids.py  messages.py  results_db.py  schemes.py  settings.py  tasks.py  utils.py  views.py
payments/tasks/: feed.py  push.py
payments/tests/: test_handlers.py  test_results_db.py  test_utils.py
tasks_utils/: datetime.py  requests.py  results_db.py  settings.py  tasks.py  weekends_on.json  workdays_off.json
tasks_utils/tests/: test_datetime.py  test_requests.py  test_results_db.py  test_tasks.py  test_utils.py  utils.py
treasury/: api_requests.py  documents.py  exceptions.py  handlers.py  settings.py  storage.py  tasks.py  templates.py
treasury/api/: auth.py  builders.py  main.py  methods.py  parsers.py  utils.py  views.py
treasury/domain/: prcontract.py  prtrans.py
treasury/templates/: catalog.xml  change.xml  contract.xml  plan.xml  report.xml
treasury/tests/: helpers.py  test_api.py  test_api_requests.py  test_tasks.py  (+4 more)
(+145 files in other folders)
