[project]
name = "prozorro-tasks"
version = "0.2.15"
description = "Prozorro tasks and crawlers"
readme = "README.rst"
requires-python = "==3.10.*"
dependencies = [
    "celery==5.5.3",
    "importlib-metadata==4.13.0",
    "flower==0.9.2",
    "requests",
    "urllib3",
    "pymongo>=4.9.0,<5",
    "lxml>=4.9.0,<5",
    "aiohttp==3.6.2",
    "python-dateutil==2.8.2",
    "pytz",
    "pyyaml",
    "python-json-logger>=2.0.2,<3",
    "Jinja2==2.11.3",
    "MarkupSafe==1.1.1",
    "itsdangerous==1.1.0",
    "tornado>=4.2.0,<6.0.0",
    "sentry-sdk==0.10.2",
    "gunicorn==20.0.4",
    "gevent==25.5.1",
    "flask==1.1.1",
    "flask-paginate==0.5.5",
    "flask-restx==0.2.0",
    "flask-httpauth==3.3.0",
    "flask-caching==1.8.0",
    "werkzeug==1.0",
    "blinker==1.4",
    "jmespath==0.9.5",
    "xlsxwriter==1.2.8",
    "zeep>=3.4,<4",
    "vine==5.1.0",
    "chardet==3.0.2",
    "asgiref==3.3.4",
    "aio-pika==6.8.0",
    "liqpay-python @ git+https://github.com/liqpay/sdk-python",
    "prozorro_crawler @ git+https://github.com/ProzorroUKR/prozorro_crawler.git@2.1.13",
    "standards @ git+https://github.com/ProzorroUKR/standards.git@1.0.38",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
