[project]
name = "prozorro-tasks"
version = "0.2.16"
description = "Prozorro tasks and crawlers"
readme = "README.rst"
requires-python = "==3.13.*"
dependencies = [
    "celery>=5.5.3,<6",
    "importlib-metadata>=9.0.0,<10",
    "flower==2.0.1,<3",
    "requests>=2.34.*,<3",
    "urllib3>=2.7.0,<3",
    "pymongo>=4.17.0,<5",
    "lxml>=6.1.1,<7",
    "aiohttp>=3.14.0,<4",
    "python-dateutil>=2.9.0,<3",
    "pytz>=2026.2",
    "pyyaml>=6.0.3,<7",
    "python-json-logger>=2.0.2,<3",
    "Jinja2>=3.1.6,<4",
    "MarkupSafe>=3.0.3,<4",
    "itsdangerous>=2.2.0,<3",
    "tornado>=6.5.7,<7.0.0",
    "sentry-sdk>=2.62.0,<3",
    "gunicorn>=26.0.0,<27",
    "gevent>=26.5.0,<27",
    "flask>=3.1.3,<4",
    "flask-paginate>=2024.4.12",
    "flask-restx>=1.3.2,<2",
    "flask-httpauth>=4.8.1,<5",
    "flask-caching>=2.4.0,<3",
    "werkzeug>=3.1.8,<4",
    "blinker>=1.9,<2",
    "jmespath>=1.1.0,<2",
    "xlsxwriter>=3.2.9,<4",
    "zeep>=4.3.2,<5",
    "vine>=5.1.0,<6",
    "chardet>=7.4.3,<8",
    "asgiref>=3.11.1,<4",
    "aio-pika>=9.6.2,<10",
    "liqpay-python @ git+https://github.com/liqpay/sdk-python",
    "prozorro_crawler @ git+https://github.com/ProzorroUKR/prozorro_crawler.git@2.1.13",
    "standards @ git+https://github.com/ProzorroUKR/standards.git@1.0.38",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
